# faceing

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.windows  README.md  build-windows.sh  build.sh  vcpkg.json
.cargo/: config.toml
.github/workflows/: build.yml
docs/: WINDOWS_BUILD.md
src/: capture.rs  database.rs  detector.rs  lib.rs  main.rs  recognizer.rs
