[package]
name = "rtsp-face-recognition"
version = "0.1.0"
edition = "2021"

[dependencies]
# OpenCV 用于视频捕获和基础图像处理
opencv = { version = "0.88", default-features = false, features = ["videoio", "imgproc", "highgui", "imgcodecs", "dnn"] }

# ONNX 推理引擎 (纯 Rust，支持交叉编译)
tract-onnx = "0.21"
ndarray = { version = "0.15", features = ["rayon"] }
image = "0.24"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 时间处理
chrono = "0.4"

# 目录操作
dirs = "5.0"

# HTTP 客户端（用于下载模型）
reqwest = { version = "0.11", features = ["blocking", "stream"] }

# 进度条
indicatif = "0.17"

# 命令行参数
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "face_detection"
path = "src/bin/face_detection.rs"

[[bin]]
name = "rtsp_face_recognition"
path = "src/main.rs"
